# iProc

./: 404.html  ArcGet.sh  README.md  compare_tsnr.sh  dss.sh  executorcli.py  iProc.py  iProc_config.sh  iProc_p4_sbatch_combined.py  iProc_p4_sbatch_combined_ME.py  index.html  mkdocs.yml  modules7.sh  modules_rocky8.sh  modwrap.sh  pyproject.toml  requirements.txt  requirements3.txt  run_tedana.py  steps.py  tedana_loop.py
big-list/: index.html
configs/: b02b0.cnf  cluster_requests.csv  tasktype_consolidated.csv
data-use-terms/: index.html
dependencies/: index.html
diff_scripts/: compare_recent_nifti.sh  compare_task.sh  diff-dat.py  diff-nifti.py  diff-pdf.py  summary_compare.py
docs/: big-list.md  data-use-terms.md  dependencies.md  fsl.md  full-tutorial.md  index.md  quickstart.md
fsl/: index.html
full-tutorial/: index.html
iproc/: __init__.py  __version__.py  steps.py
quickstart/: index.html
runscript/: align_to_midvol_mean.sh  anat_from_bids.py  bandpass.sbatch  bandpass_ME.sbatch  bbreg.sh  bet_MNI.sh  calculate_nuisance_params.py  calculate_nuisance_params.sh  combine_warps_parallel.sbatch  combine_warps_parallel_ME.sbatch  combine_warps_post.sh  combine_warps_post_MNI.sh  compute_T1_MNI_warp.sh  create_alignment_png-ax-sag-cleanup.sh  create_alignment_png.sh  create_motion_outlier_matrix.py  create_upsampled_midvol_target.sh  fm_unw.sh  fm_unwarp_and_mc_to_midvol.sh  fmap_from_bids.py  fmap_from_bids_topup.sh  fmap_fsl_prepare_fieldmap_prep.sh  fmap_topup_prep.sh  fs6_project_to_surf.sh  fs6_project_to_surf_ME.sh  fslmerge_meantime.sh  p2a.sh  (+18 more)
(+27 files in other folders)
