[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "iProc"
version = "v2.6.0-beta.2"
dependencies = [
    "nibabel == 5.3.3",
    "texttable == 0.8.4",
    "paramiko == 3.3.1",
    "numpy == 1.25.2",
    "scipy == 1.16.3",
    "matplotlib == 3.10.8",
    "PyYAML == 5.2",
    "yaxil == 0.13.1",
    "configparser == 3.5.0"
]
requires-python = ">= 3.8"

[project.scripts]
"iProc.py" = "iproc.cli.iproc:main"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material"
]

[tool.hatch.build]
packages = [
    "iproc",
    "iproc.cli",
    "iproc.steps"
]
